--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"currency.js": "^2.0.4"
+		"@fontsource/manrope": "^4.5.13",
+		"currency.js": "^2.0.4",
+		"socket.io": "^4.6.1",
+		"socket.io-client": "^4.6.1"
 	}
 }
