--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/uuid": "^9.0.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
@@ -23,6 +24,7 @@
 		"@fontsource/manrope": "^4.5.13",
 		"currency.js": "^2.0.4",
 		"socket.io": "^4.6.1",
-		"socket.io-client": "^4.6.1"
+		"socket.io-client": "^4.6.1",
+		"uuid": "^9.0.0"
 	}
 }
